==> apache/nuttx/arch/arm/src/sam3u/sam_spi.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <semaphore.h>
#include <errno.h>
#include <debug.h>
#include <arch/board/board.h>
#include <nuttx/arch.h>
#include <nuttx/spi.h>
#include "up_internal.h"
#include "up_arch.h"
#include "chip.h"
#include "sam_gpio.h"
#include "sam_spi.h"
#include "chip/sam_pmc.h"
#include "chip/sam_spi.h"
#include "chip/sam_pinmap.h"
#  define spidbg lldbg
#    define spivdbg lldbg
#    define spivdbg(x...)
#  define spidbg(x...)
#  define spivdbg(x...)
# define spi_dumpregs(msg)

static uint32_t spi_setfrequency(FAR struct spi_dev_s *dev, uint32_t frequency)
{
  FAR struct sam_spidev_s *priv = (FAR struct sam_spidev_s *)dev;
  uint32_t actual;
  uint32_t scbr;
  uint32_t dlybs;
  uint32_t dlybct;
  uint32_t regval;
  uint32_t regaddr;

  spivdbg("cs=%d frequency=%d\n", priv->cs, frequency);
  DEBUGASSERT(priv->cs >= 0 && priv->cs <= 3);

  /* Check if the requested frequency is the same as the frequency selection */

#ifndef CONFIG_SPI_OWNBUS
  if (priv->csstate[priv->cs].frequency == frequency)
    {
      /* We are already at this frequency.  Return the actual. */

      return priv->csstate[priv->cs].actual;
    }
#endif

  /* Configure SPI to a frequency as close as possible to the requested frequency.
   *
   *   SPCK frequency = MCK / SCBR, or SCBR = MCK / frequency
   */

  scbr = SAM_MCK_FREQUENCY / frequency;

  if (scbr < 8)
    {
      scbr = 8;
    }
  else if (scbr > 254)
    {
      scbr = 254;
    }

  scbr = (scbr + 1) & ~1;

  /* Save the new scbr value */

  regaddr = g_csraddr[priv->cs];
  regval  = getreg32(regaddr);
  regval &= ~(SPI_CSR_SCBR_MASK|SPI_CSR_DLYBS_MASK|SPI_CSR_DLYBCT_MASK);
  regval |= scbr << SPI_CSR_SCBR_SHIFT;

  /* DLYBS: Delay Before SPCK.  This field defines the delay from NPCS valid to the
   * first valid SPCK transition. When DLYBS equals zero, the NPCS valid to SPCK
   * transition is 1/2 the SPCK clock period. Otherwise, the following equations
   * determine the delay:
   *
   *   Delay Before SPCK = DLYBS / MCK
   *
   * For a 2uS delay
   *
   *   DLYBS = MCK * 0.000002 = MCK / 500000
   */

  dlybs   = SAM_MCK_FREQUENCY / 500000;
  regval |= dlybs << SPI_CSR_DLYBS_SHIFT;

  /* DLYBCT: Delay Between Consecutive Transfers.  This field defines the delay
   * between two consecutive transfers with the same peripheral without removing
   * the chip select. The delay is always inserted after each transfer and
   * before removing the chip select if needed.
   *
   *  Delay Between Consecutive Transfers = (32 x DLYBCT) / MCK
   *
   * For a 5uS delay:
   *
   *  DLYBCT = MCK * 0.000005 / 32 = MCK / 200000 / 32
   */

  dlybct  = SAM_MCK_FREQUENCY / 200000 / 32;
  regval |= dlybct << SPI_CSR_DLYBCT_SHIFT;
  putreg32(regval, regaddr);

  /* Calculate the new actual frequency */

  actual = SAM_MCK_FREQUENCY / scbr;
  spivdbg("csr[%08x]=%08x actual=%d\n", regaddr, regval, actual);

  /* Save the frequency setting */

#ifndef CONFIG_SPI_OWNBUS
  priv->csstate[priv->cs].frequency = frequency;
  priv->csstate[priv->cs].actual    = actual;
#endif

  spidbg("Frequency %d->%d\n", frequency, actual);
  return actual;
}

static void spi_setmode(FAR struct spi_dev_s *dev, enum spi_mode_e mode)
{
  FAR struct sam_spidev_s *priv = (FAR struct sam_spidev_s *)dev;
  uint32_t regval;
  uint32_t regaddr;

  spivdbg("cs=%d mode=%d\n", priv->cs, mode);
  DEBUGASSERT(priv->cs >= 0 && priv->cs <= 3);

  /* Has the mode changed? */

#ifndef CONFIG_SPI_OWNBUS
  if (mode != priv->csstate[priv->cs].mode)
    {
#endif
      /* Yes... Set the mode appropriately */

      regaddr = g_csraddr[priv->cs];
      regval  = getreg32(regaddr);
      regval &= ~(SPI_CSR_CPOL|SPI_CSR_NCPHA);

      switch (mode)
        {
        case SPIDEV_MODE0: /* CPOL=0; NCPHA=0 */
          break;

        case SPIDEV_MODE1: /* CPOL=0; NCPHA=1 */
            regval |= SPI_CSR_NCPHA;
          break;

        case SPIDEV_MODE2: /* CPOL=1; NCPHA=0 */
            regval |= SPI_CSR_CPOL;
          break;

        case SPIDEV_MODE3: /* CPOL=1; NCPHA=1 */
          regval |= (SPI_CSR_CPOL|SPI_CSR_NCPHA);
          break;

        default:
          DEBUGASSERT(FALSE);
          return;
        }

      putreg32(regval, regaddr);
      spivdbg("csr[%08x]=%08x\n", regaddr, regval);

      /* Save the mode so that subsequent re-configurations will be faster */

#ifndef CONFIG_SPI_OWNBUS
      priv->csstate[priv->cs].mode = mode;
    }
#endif
}

static void spi_setbits(FAR struct spi_dev_s *dev, int nbits)
{
  FAR struct sam_spidev_s *priv = (FAR struct sam_spidev_s *)dev;
  uint32_t regaddr;
  uint32_t regval;

  spivdbg("cs=%d nbits=%d\n", priv->cs, nbits);
  DEBUGASSERT(priv && nbits > 7 && nbits < 17);
  DEBUGASSERT(priv->cs >= 0 && priv->cs <= 3);

  /* NOTE:  The logic in spi_send and in spi_exchange only handles 8-bit
   * data at the present time.  So the following extra assertion is a
   * reminder that we have to fix that someday.
   */

  DEBUGASSERT(nbits == 8); /* Temporary -- FIX ME */

  /* Has the number of bits changed? */

#ifndef CONFIG_SPI_OWNBUS
  if (nbits != priv->csstate[priv->cs].nbits)
    {
#endif
      /* Yes... Set number of bits appropriately */

      regaddr = g_csraddr[priv->cs];
      regval  = getreg32(regaddr);
      regval &= ~SPI_CSR_BITS_MASK;
      regval |= SPI_CSR_BITS(nbits);
      putreg32(regval, regaddr);

      spivdbg("csr[%08x]=%08x\n", regaddr, regval);

      /* Save the selection so the subsequence re-configurations will be faster */

#ifndef CONFIG_SPI_OWNBUS
      priv->csstate[priv->cs].nbits = nbits;
    }
#endif
}

static void  spi_exchange(FAR struct spi_dev_s *dev,
                          FAR const void *txbuffer, FAR void *rxbuffer,
                          size_t nwords)
{
  FAR struct sam_spidev_s *priv = (FAR struct sam_spidev_s *)dev;
  FAR uint8_t *rxptr = (FAR uint8_t*)rxbuffer;
  FAR uint8_t *txptr = (FAR uint8_t*)txbuffer;
  uint32_t pcs;
  uint32_t data;

  spivdbg("txbuffer=%p rxbuffer=%p nwords=%d\n", txbuffer, rxbuffer, nwords);

  /* Set up PCS bits */

  pcs = spi_cs2pcs(priv) << SPI_TDR_PCS_SHIFT;

  /* Make sure that any previous transfer is flushed from the hardware */

  spi_flush();

  /* Loop, sending each word in the user-provied data buffer.
   *
   * Note 1: Right now, this only deals with 8-bit words.  If the SPI
   *         interface were configured for words of other sizes, this
   *         would fail.
   * Note 2: Good SPI performance would require that we implement DMA
   *         transfers!
   * Note 3: This loop might be made more efficient.  Would logic
   *         like the following improve the throughput?  Or would it
   *         just add the risk of overruns?
   *
   *   Get word 1;
   *   Send word 1;  Now word 1 is "in flight"
   *   nwords--;
   *   for ( ; nwords > 0; nwords--)
   *     {
   *       Get word N.
   *       Wait for TDRE meaning that word N-1 has moved to the shift
   *          register.
   *       Disable interrupts to keep the following atomic
   *       Send word N.  Now both work N-1 and N are "in flight"
   *       Wait for RDRF meaning that word N-1 is available
   *       Read word N-1.
   *       Re-enable interrupts.
   *       Save word N-1.
   *     }
   *   Wait for RDRF meaning that the final word is available
   *   Read the final word.
   *   Save the final word.
   */

  for ( ; nwords > 0; nwords--)
    {
      /* Get the data to send (0xff if there is no data source) */

      if (rxptr)
        {
          data = (uint32_t)*txptr++;
        }
      else
        {
          data = 0xffff;
        }

      /* Set the PCS field in the value written to the TDR */

      data |= pcs;

      /* Do we need to set the LASTXFER bit in the TDR value too? */

#ifdef CONFIG_SPI_VARSELECT
      if (nwords == 1)
        {
          data |= SPI_TDR_LASTXFER;
        }
#endif

      /* Wait for any previous data written to the TDR to be transferred
       * to the serializer.
       */

      while ((getreg32(SAM_SPI_SR) & SPI_INT_TDRE) == 0);

      /* Write the data to transmitted to the Transmit Data Register (TDR) */

      putreg32(data, SAM_SPI_TDR);

      /* Wait for the read data to be available in the RDR */

      while ((getreg32(SAM_SPI_SR) & SPI_INT_RDRF) == 0);

      /* Read the received data from the SPI Data Register */

      data = getreg32(SAM_SPI_RDR);
      if (rxptr)
        {
          *rxptr++ = (uint8_t)data;
        }
    }
}

FAR struct spi_dev_s *up_spiinitialize(int port)
{
  FAR struct sam_spidev_s *priv = &g_spidev;
  irqstate_t flags;
  uint32_t regval;

  /* The SAM3U has only a single SPI port */

  spivdbg("port=%d\n", port);
  DEBUGASSERT(port == 0);

  /* Set up the initial state */

  priv->cs = 0xff;

  /* Apply power to the SPI block */

  flags = irqsave();
  regval = getreg32(SAM_PMC_PCER);
  regval |= (1 << SAM_PID_SPI);
#ifdef CONFIG_SAM34_SPIINTERRUPT
  regval |= (1 << SAM_IRQ_SPI);
#endif
  putreg32(regval, SAM_PMC_PCER);

  /* Configure multiplexed pins as connected on the board.  Chip select pins
   * must be configured by board-specific logic.
   */

  sam_configgpio(GPIO_SPI0_MISO);
  sam_configgpio(GPIO_SPI0_MOSI);
  sam_configgpio(GPIO_SPI0_SPCK);

  /* Disable SPI clocking */

  putreg32(SPI_CR_SPIDIS, SAM_SPI_CR);

  /* Execute a software reset of the SPI (twice) */

  putreg32(SPI_CR_SWRST, SAM_SPI_CR);
  putreg32(SPI_CR_SWRST, SAM_SPI_CR);
  irqrestore(flags);

  /* Configure the SPI mode register */

  putreg32(SPI_MR_MSTR | SPI_MR_MODFDIS, SAM_SPI_MR);

  /* And enable the SPI */

  putreg32(SPI_CR_SPIEN, SAM_SPI_CR);
  up_mdelay(20);

  /* Flush any pending transfers */

  (void)getreg32(SAM_SPI_SR);
  (void)getreg32(SAM_SPI_RDR);

  /* Initialize the SPI semaphore that enforces mutually exclusive access */

#ifndef CONFIG_SPI_OWNBUS
  sem_init(&priv->exclsem, 0, 1);
#endif
  spi_dumpregs("After initialization");
  return &priv->spidev;
}
